Fixing header alignment, footer

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -33,6 +33,12 @@
   }
 }
 
+/* @media (min-width: 768px) {
+  .app.badge {
+    width: 10%;
+  }
+} */
+
 @media (min-width: 768px) {
   .pingologo {
     width: 15%;
@@ -40,8 +46,13 @@
 }
 
 @media (max-width: 767px) {
-  .trclogo,
+  .trclogo {  
+    width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
   .pingologo {
-    width: 30%;
+    width: 60%;
   }
 }
